update README.yml abstracts

--- a/README.yml
+++ b/README.yml
@@ -4,7 +4,8 @@ owner:
     name: Liu, Yuchen
     url: https://github.com/bigdata-i523/hid213
 paper1:
-    abstract: 'Nowadays, Speech Recognition is becoming more and more important. Many
+    abstract: >
+        Nowadays, Speech Recognition is becoming more and more important. Many
         technology companies are trying to use Big Data to develop more efficient
         and accurate algorithm for Speech Recognition. Nowadays, Deep learning can
         be described as the foundation of Speech Recognition. Deep learning algorithms
@@ -13,8 +14,6 @@ paper1:
         Recently, IBM published a paper where the word error rate was below 5.5 percent.
         In August, Microsoft speech recognition system has reached a 5.1 percent error
         rate.
-
-        '
     author:
         - Yuchen Liu
     hid:
