--- a/README.yml
+++ b/README.yml
@@ -22,6 +22,7 @@ paper1:
     title: Big Data and Speech Recognition
     type: latex
     url: https://github.com/bigdata-i523/hid213/paper1/paper1.pdf
+    chapter: Media
 paper2:
     abstract: TBD
     author:
