--- a/README.yml
+++ b/README.yml
@@ -18,11 +18,10 @@ paper1:
         - Yuchen Liu
     hid:
         - 213
-    status: 100%
+    status: Oct 06 2017 100%
     title: Big Data and Speech Recognition
     type: latex
     url: https://github.com/bigdata-i523/hid213/paper1/paper1.pdf
-    chapter: Media
 paper2:
     abstract: TBD
     author:
