--- a/README.yml
+++ b/README.yml
@@ -5,15 +5,17 @@ owner:
     url: https://github.com/bigdata-i523/hid213
 paper1:
     abstract: >
-        Nowadays, Speech Recognition is becoming more and more important. Many
-        technology companies are trying to use Big Data to develop more efficient
-        and accurate algorithm for Speech Recognition. Nowadays, Deep learning can
-        be described as the foundation of Speech Recognition. Deep learning algorithms
-        such as RNN and CNN often need to supported by large amount of data -- Big
-        data.  Before Big Data and deep learning, the word error rate was 24 percent.
-        Recently, IBM published a paper where the word error rate was below 5.5 percent.
-        In August, Microsoft speech recognition system has reached a 5.1 percent error
-        rate.
+        Nowadays, Speech Recognition is becoming more and more
+        important. Many technology companies are trying to use Big
+        Data to develop more efficient and accurate algorithm for
+        Speech Recognition. Nowadays, Deep learning can be described
+        as the foundation of Speech Recognition. Deep learning
+        algorithms such as RNN and CNN often need to supported by
+        large amount of data -- Big data.  Before Big Data and deep
+        learning, the word error rate was 24 percent.  Recently, IBM
+        published a paper where the word error rate was below 5.5
+        percent.  In August, Microsoft speech recognition system has
+        reached a 5.1 percent error rate.
     author:
         - Yuchen Liu
     hid:
@@ -22,6 +24,7 @@ paper1:
     title: Big Data and Speech Recognition
     type: latex
     url: https://github.com/bigdata-i523/hid213/paper1/paper1.pdf
+    chapter: Media
 paper2:
     abstract: TBD
     author:
