--- a/README.yml
+++ b/README.yml
@@ -24,13 +24,14 @@ paper1:
     title: Big Data and Speech Recognition
     type: latex
     url: https://github.com/bigdata-i523/hid213/paper1/paper1.pdf
-    chapter: Media
+
 paper2:
     abstract: TBD
     author:
         - Yuchen Liu
     hid:
         - 213
-    title: TBD
+    title: Big Data and Face Identification
+    status: Oct 28 2017 50%
     type: latex
-    url: https://github.com/bigdata-i523/hd213/project/report.pdf
+    url: https://github.com/bigdata-i523/hd213/paper2/paper2.pdf
