--- a/README.yml
+++ b/README.yml
@@ -26,6 +26,7 @@ paper1:
     url: https://github.com/bigdata-i523/hid213/paper1/paper1.pdf
     chapter: Media
 paper2:
+    review: Nov 6 2017
     abstract: TBD
     author:
         - Yuchen Liu
