--- a/README.yml
+++ b/README.yml
@@ -55,7 +55,7 @@ paper2:
     status: Nov 06 2017 100%
     type: latex
     url: https://github.com/bigdata-i523/hd213/paper2/paper2.pdf
-    chapter: security
+    chapter: Security
 project:
     review: Dec 4 2017
     abstract: >
@@ -90,3 +90,4 @@ project:
     status: Dec 04 2017 100%
     type: latex
     url: https://github.com/bigdata-i523/hd213/Project/report.pdf
+    chapter: Media
