--- a/README.yml
+++ b/README.yml
@@ -88,6 +88,6 @@ project:
         - 214
     title: Comparison between different classification algorithms in Digit Recognizer
     status: Dec 04 2017 100%
-    type: latex
+    type: project
     url: https://github.com/bigdata-i523/hd213/Project/report.pdf
     chapter: Media
